# QUVI

./: .gitignore  .gitmodules  README.md  build.sh  dev.http  git_check.sh  langfuse.db  main.py  models_2.py  package-run.sh  pom.xml  pyproject.toml  requirements.txt  run.ps1  run.py  run.sh  start.sh  stop.sh  temp.json  test_main.http  test_retriever.py  test_vector.py  user_generator.py
ML/: classification.py  regression.py
admin/: session_manager.py
agent/: Dockerfile  docker-build.sh  docker-compose.build.yml  docker-compose.run.yml  docker-run.sh  pom.xml  run.sh  stop.sh
api/: api.py  chroma_api.py  data_api.py  dto.py  llmadmin_api.py  mapping_api.py  recommend_api.py  stock_api.py  table_api.py  voc_api.py
chroma_local/: chromaDB.py
core/: api.py  dto.py  postgresql.py  quvi_api.py  quvi_model.py
custom_types/: types.py
data_class/: request.py
database/: database_service.py  postgresql.py  vector_db.py
doc/: quvi2.vuerd.json
front_test/: front.py  index.html  main.js  styles.css  test.py  test_llmadmin.py  test_ml.py
fuse/: langfuse_client.py  langfuse_handler.py  langfuse_server.py
graph/: classifier.py  graph.py  models.py  node.py  task.py  trace_state.py  types.py  utils.py
llm_admin/: chain_manager.py  conversation_manager.py  history_manager.py  qna_manager.py  session_manager.py  state_manager.py  trace_manager.py
llm_models/: models.py
nodes/: executor.py  graph.py  planner.py  solver.py
old_python/: .gitignore  README.md  requirements.txt  start.sh  stop.sh
prompts/: commander.prompt  date-amt.prompt  date.prompt  (+17 more)
(+548 files in other folders)
