[project]
name = "server_python"
version = "0.1.0"
description = "Python server project"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "pytest>=8.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["test"]
python_files = ["test_*.py"]

[tool.hatch.build.targets.wheel]
packages = ["utils"] 